# rtop

./: Cargo.toml  README.md  Textfile.txt
src/: action.rs  app.rs  config.rs  main.rs  tui.rs  utils.rs
src/components/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs
src/data/: collector.rs  mod.rs  snapshot.rs
src/theme/: default.rs  mod.rs
src/widgets/: braille_graph.rs  mod.rs
